値段のカンマ区切り、それに伴うフォントサイズの変更、const letに書き換え

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>ズボン</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">3000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">3,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="ズボン" data-price="3000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -43,7 +43,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>ジョウロ</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">2000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">2,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="ジョウロ" data-price="2000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -56,7 +56,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>メガネ</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">20000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">20,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="メガネ" data-price="20000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -69,7 +69,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>風景画</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">500000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">500,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="風景画" data-price="500000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -82,7 +82,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>ワイン</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">4000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">4,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="ワイン" data-price="4000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -95,7 +95,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>ホールケーキ</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">3000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">3,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="ホールケーキ" data-price="3000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -108,7 +108,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>ダイアモンド</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">10000000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">10,000,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="ダイアモンド" data-price="10000000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -121,7 +121,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>自転車</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">30000</span></div>
+            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">30,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="自転車" data-price="30000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
@@ -147,7 +147,7 @@
           </div>
           <div class="item_textbox">
             <div class="item_title"><h2>ダンベル</h2></div>
-            <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">1000</span></div>
+            <div class="item_price"><span class="yen_symbol">￥</span><span class="js_get_price">1,000</span></div>
             <div class="item_btnarea">
               <button class="item_cart_btn js_cart_btn" data-name="ダンベル" data-price="1000">カート</button>
               <a class="item_buy_btn" href="confirm.html">購入</a>
